5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1800_2573.log
== TEST (2019-06-12 13:05:10) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)
for i in range(size(peso)):
	fimc = peso[i]/(alt[i]*alt[i])
	imc[i] = imc[i] + fmci[i]
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:06:02) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)
ifmc = 0
for i in range(size(peso)):
	fimc = peso[i]/(alt[i]*alt[i])
	imc[i] = imc[i] + fmci[i]
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:06:15) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)
ifmc = 0
for i in range(size(peso)):
	fimc = peso[i]/(alt[i]*alt[i])
	imc[i] = imc[i] + fmci[i]
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:07:58) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/altura[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:08:25) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:08:42) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:08:55) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:08:55) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:09:17) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:09:19) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:09:36) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:09:36) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:09:55) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:10:05) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:11:54) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:12:25) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:12:48) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:13:15) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:13:47) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:14:19) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:14:55) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt, dtype=float)

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:16:34) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(alt
			  )

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:17:59) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(size(alt))

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:20:23) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(size(alt))

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:20:48) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(size(alt))

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:28:22) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(size(alt))

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
if(max(imc)<17):
	print("MUITO ABAIXO DO PESO")
elif(max(imc)>=17 and max(imc)=<18.49):
	print("ABAIXO DO PESO")
elif(max(imc)>=18.5 and max(imc)<=24.99):
	print("PESO NORMAL")
elif(max(imc)>=25 and max(imc)<=29.99):
	print("ACIMA DO PESO")
elif(max(imc)>=30 and max(imc)<=34.99):
	print("OBESIDADE SEVERA")
elif(max(imc)>40):
	print("OBESIDADE MORBIDA")
-- ERROR:
File "XXXX", line 12
    elif(max(imc)>=17 and max(imc)=<18.49):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:29:52) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(size(alt))

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
if(max(imc)<17):
	print("MUITO ABAIXO DO PESO")
elif(max(imc)>=17 and max(imc)<=18.49):
	print("ABAIXO DO PESO")
elif(max(imc)>=18.5 and max(imc)<=24.99):
	print("PESO NORMAL")
elif(max(imc)>=25 and max(imc)<=29.99):
	print("ACIMA DO PESO")
elif(max(imc)>=30 and max(imc)<=34.99):
	print("OBESIDADE SEVERA")
elif(max(imc)>40):
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:31:16) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(size(alt))

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
if(max(imc)<17):
	print("MUITO ABAIXO DO PESO")
elif(max(imc)>=17 and max(imc)<=18.49):
	print("ABAIXO DO PESO")
elif(max(imc)>=18.5 and max(imc)<=24.99):
	print("PESO NORMAL")
elif(max(imc)>=25 and max(imc)<=29.99):
	print("ACIMA DO PESO")
elif(max(imc)>=30 and max(imc)<=34.99):
	print("OBESIDADE")
elif(max(imc)>=35 and max(imc)<=39.99)
elif(max(imc)>40):
	print("OBESIDADE MORBIDA")
-- ERROR:
File "XXXX", line 20
    elif(max(imc)>=35 and max(imc)<=39.99)
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:31:38) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(size(alt))

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
if(max(imc)<17):
	print("MUITO ABAIXO DO PESO")
elif(max(imc)>=17 and max(imc)<=18.49):
	print("ABAIXO DO PESO")
elif(max(imc)>=18.5 and max(imc)<=24.99):
	print("PESO NORMAL")
elif(max(imc)>=25 and max(imc)<=29.99):
	print("ACIMA DO PESO")
elif(max(imc)>=30 and max(imc)<=34.99):
	print("OBESIDADE")
elif(max(imc)>=35 and max(imc)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(imc)>40):
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:31:51) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(size(alt))

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
if(max(imc)<17):
	print("MUITO ABAIXO DO PESO")
elif(max(imc)>=17 and max(imc)<=18.49):
	print("ABAIXO DO PESO")
elif(max(imc)>=18.5 and max(imc)<=24.99):
	print("PESO NORMAL")
elif(max(imc)>=25 and max(imc)<=29.99):
	print("ACIMA DO PESO")
elif(max(imc)>=30 and max(imc)<=34.99):
	print("OBESIDADE")
elif(max(imc)>=35 and max(imc)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(imc)>40):
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:32:21) 
-- CODE:
from numpy import *
peso = array(eval(input("digite os pesos: ")))
alt = array(eval(input("digite as alturas: ")))
imc = zeros(size(alt))

for i in range(size(peso)):
	imc[i] = round(peso[i]/alt[i]**2,2)
print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
if(max(imc)<17):
	print("MUITO ABAIXO DO PESO")
elif(max(imc)>=17 and max(imc)<=18.49):
	print("ABAIXO DO PESO")
elif(max(imc)>=18.5 and max(imc)<=24.99):
	print("PESO NORMAL")
elif(max(imc)>=25 and max(imc)<=29.99):
	print("ACIMA DO PESO")
elif(max(imc)>=30 and max(imc)<=34.99):
	print("OBESIDADE")
elif(max(imc)>=35 and max(imc)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(imc)>40):
	print("OBESIDADE MORBIDA")
-- EXECUTION TIME:
1.09108
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
